--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,21 @@
 */
 
 /* Layout */
+html, body, #home {
+    height: 100%;
+}
+
 body {
     background: url(../img/capa.png),
                 url(../img/ruido.png),
                 linear-gradient(50deg, #ff4169, #7c26f8);
     background-attachment: fixed;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /* barra de navegação */
 nav.navbar-transparente{
-    padding: 0px, 15px;
+    padding: 0px 15px;
     background: rgba(0, 0, 0, 0.6);
 }
 
@@ -33,4 +38,44 @@ nav.navbar-transparente{
 .divisor {
     width: 1px;
     background: #ffffff;
+    margin: 12px 15px;
 }
+
+/* Capa */
+.capa {
+    text-align: center;
+}
+
+h1 {
+    font-weight: 900;
+    letter-spacing: -0.05em;
+    margin-bottom: 50px;
+    color: #ffffff;
+}
+
+/* Extra small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) { 
+    h1{
+        font-size: 3em;
+    }
+}
+
+/* // Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) and (max-width: 767.98px) { 
+    h1{
+        font-size: 3em;
+    }
+}
+
+/* // Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 991.98px) { 
+    h1{
+        font-size: 3em;
+    }
+ }
+
+/* // Large devices (desktops, 992px and up) */
+@media (min-width: 992px) and (max-width: 1199.98px) { ... }
+
+/* // Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) { ... }
