--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,61 @@ nav.navbar-transparente{
     color: #7c25f8;
 }
 
+/* Recursos */
+#recursos {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+#recursos h2, h3 {
+    margin-bottom: 10px;
+    color: #9bf0e1;
+}
+
+#recursos p {
+    color: #ffffff;
+}
+
+/* rodapé */
+footer {
+        background: #000000;
+        padding: 50px 0px 20px 0px;
+        position: relative;
+}
+
+footer h4 {
+    color: #919496;
+    font-size: 0.8em;
+    text-transform: uppercase;
+}
+
+footer .navbar-nav a {
+    color: #ffffff;
+    font-size: 0.8em;
+}
+
+footer .navbar-nav a:hover {
+    color: #9bf0e1;
+    text-decoration: none;
+}
+
+footer ul {
+    list-style: none;
+}
+
+
+footer ul li {
+    float: right;
+    margin: 0px 10px;
+}
+
+.rotate-img {
+    -webkit-transform: rotate(30deg); /* Chrome, Safari, Opera */
+    -ms-transform: rotate(30deg); /* IE 9 */
+    transform: rotate(30deg);
+    padding-left: 80px;
+}
+
 /* tipografia */
 h1 {
     font-weight: 900;
@@ -122,6 +177,7 @@ h3 {
         transition: background 0.4s, color 0.4s;
         padding: 10px 15px;
         margin: 5px 10px;
+        font-size: 1em;
     }
 }
 
