--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,12 @@ nav.navbar-transparente{
     padding-top: 20px;
 }
 
-#servicos h2, h3{
+#servicos h2 {
+    margin-bottom: 10px;
+    color: #7c25f8;
+}
+
+#servicos h3 {
     margin-bottom: 10px;
     color: #7c25f8;
 }
